--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "vision-aio",
   "version": "1.0.0",
+  "author": {
+    "name": "CactusWeb",
+    "email": "info@cactusweb.io",
+    "url": "https://githib.com/cactusweb"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
